--- a/package.json
+++ b/package.json
@@ -22,5 +22,9 @@
     "react": "^16.2.0",
     "react-fontawesome": "^1.6.1",
     "webpack": "^3.10.0"
+  },
+  "repository": {
+    "type" : "git",
+    "url" : "git+https://github.com/hammadfauz/coloredbutton.git"
   }
 }
